--- a/editor/src/json/README
+++ b/editor/src/json/README
@@ -5,6 +5,9 @@ files support the ionconfig browser tool, ionconfig command-line tool and dictio
 
    cmdTypes.json      describes the supported ION command types
 
+   cmdMsgs.json       contains messages that should be displayed in the GUI for certain commands
+                      (NOT YET USED)
+
    patterns.json      provides command patterns with parameter substitutions per ION command type
 
    paramTypes.json    describes each parameter per ION command type
