--- a/cli/docs/README
+++ b/cli/docs/README
@@ -47,6 +47,7 @@ Program details
 //                           watch characters in ION. Valid values are:
 //                           all - set the watch in all config files that 
 //                                 support it. 
+//                           bibe - set the watch in biberc
 //                           bp - set the watch in all versions of bprc
 //                           bssp - set the watch in bssprc
 //                           cfdp - set the watch in cfdprc
